--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "node-fetch": "^2.6.1",
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "path": "^0.12.7"
   }
 }
